# server/app/controllers/helper/User.scala
@@ -36,9 +36,7 @@
 package controllers.helper
 
 import datasources.{ProxyDataSource, SCHEMA}
-import javax.inject.Inject
-import play.api.libs.json.JsValue
-import javax.inject.Singleton
+import javax.inject.{Inject, Singleton}
 
 @Singleton
 class User @Inject()(pds: ProxyDataSource){
@@ -46,12 +44,11 @@ class User @Inject()(pds: ProxyDataSource){
   /**
    * Checks in database if a user exists with the access_token of the json.
    *
-   * @param json original request.
+   * apiKey: access_token for authorization
    * @return the owner_id of the user.
    */
-  def authorize(json: JsValue): String = {
-    val token = (json \ SCHEMA.fAccessToken).as[String]
-    val user = pds.getIDatasource.getFromKeyAsJson(SCHEMA.cUsers, SCHEMA.fAccessToken, token)
+  def authorize(apiKey: String): String = {
+    val user = pds.getIDatasource.getFromKeyAsJson(SCHEMA.cUsers, SCHEMA.fAccessToken, apiKey)
     if (user != null)
       return (user \ SCHEMA.fOwnerId).as[String]
     null
